--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ body {
 
 .select-block {
 	background: url(../img/sel/sloi.jpg) no-repeat center / cover;
-	height: 80vh;
+	height: 540px;
 }
 
 .select-block {
