--- a/css/main.css
+++ b/css/main.css
@@ -188,7 +188,8 @@ box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 
 .tour-car {
 	background-color: #F1FAFF;
-	height: 623px;
+	height: 540px;
+	    margin-top: -100px;
 }
 
 .first {
