--- a/css/main.css
+++ b/css/main.css
@@ -183,7 +183,45 @@ box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 	padding: 14px 63px 14px 15px!important;
 	height: 54px!important;
 }
+.line-left-d {
+	display: flex;
+	align-items: center;
+}
+.line-left {
 
+	height: 5px;
+	background-color: #0A85C1;
+	border: 1px solid #0A85C1;
+	width: 66px;
+}
+
+.line-right-d{
+	display: flex;
+	align-items: center;
+}
+.line-right{
+	height: 5px;
+	background-color: #0A85C1;
+	border: 1px solid #0A85C1;
+	width: 539px;
+}
+.tour-car {
+	background-color: #F1FAFF;
+	height: 623px;
+}
+.tour-text {
+	
+	color: #848484;
+}
+.tour-text h2 {
+	font-size: 35px;
+}
+.tour-span span {
+	color: #0A85C1;
+}
+.tour-title {
+	margin-bottom: 35px;
+}
 
 
 .tour-car {
