--- a/css/main.css
+++ b/css/main.css
@@ -176,12 +176,18 @@ box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 }
 
 .btn-warning {
+	position: relative;
+	left: -38px;
+	width: 148px;
 	color: white!important;
 	font-weight: 600!important;
 	font-size: 20px!important;
 	margin-top: -1px;
 	padding: 10px 22px 14px 15px!important;
 	height: 54px!important;
+}
+.tab-last{
+	border-right: none!important;
 }
 .line-left-d {
 	display: flex;
