--- a/css/main.css
+++ b/css/main.css
@@ -213,7 +213,9 @@ box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 }
 .tour-car {
 	background-color: #F1FAFF;
-	height: 500px;
+	height: 556px;
+	position: relative;
+	top: -61px;
 }
 .tour-text {
 	text-transform: uppercase;
@@ -357,7 +359,7 @@ box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 
 .owl-nav div {
 	width: 55px;
-	height: 5px;
+	height: 55px;
 	text-align: center;
 	cursor: pointer;
 	background-color: white;
