--- a/css/main.css
+++ b/css/main.css
@@ -293,7 +293,7 @@ box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 
 .down {
 	position: relative;
-	top: -68px;
+	top: -131px;
 	background-color: #315A6D;
 	opacity: .8;
 	height: 43px;
@@ -302,8 +302,11 @@ box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 	-webkit-border-radius: 5px 5px 5px 5px;
 	border: 0px solid #000000;
 }
-
-.down img {
+.down-content {
+	position: relative;
+	top: -173px;
+}
+.down-content img {
 	height: 43px;
 	padding-left: 132px;
 	position: relative;
@@ -312,7 +315,7 @@ box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 
 .down-text {
 	color: white;
-	line-height: 20px;
+	line-height: 19px;
 	padding-left: 10px;
 }
 
@@ -322,7 +325,7 @@ box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 }
 
 .btn-zaka {
-	height: 43px;
+	height: 44px;
 	margin-left: 138px;
 	color: white!important;
 	position: relative;
