--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 .header {
-	padding: 25px 0 25px;
+	padding: 10px 0 10px;
 }
 
 .header-block {
@@ -64,7 +64,7 @@ body {
 
 .select-block {
 	background: url(../img/sel/sloi.jpg) no-repeat center / cover;
-	height: 80vh;
+	height: 540px;
 }
 
 .select-block {
